fix textwhite spacing

--- a/views/css/index.css
+++ b/views/css/index.css
@@ -92,7 +92,8 @@ main {
   z-index: 10;
   background-color: #fff;
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-  white-space: nowrap;
+  /* white-space: nowrap; */
+  white-space: break-spaces;
 }
 
 .table-content {
